# Air_Quality_Monitor_ESP32

./: .gitmodules  sdkconfig  sdkconfig.old
components/bmp280/: CMakeLists.txt
components/scd4x/: CMakeLists.txt
components/sgp4x/: CMakeLists.txt
main/: CMakeLists.txt  bmp280_port.c  main.c  sensirion_i2c_hal.c  u8g2_port.c
main/include/: bmp280_port.h  board_config.h  u8g2_port.h
